fix(Card): fix dark mode color

--- a/packages/themes/src/morpheme/_card.dark.scss
+++ b/packages/themes/src/morpheme/_card.dark.scss
@@ -1,6 +1,7 @@
 .dark {
   .card {
-    &-default {
+      --card-color: var(--color-gray-true-100);
+      &-default {
       --card-bg-color: var(--color-gray-true-800);
       --card-color: var(--color-gray-true-200);
       --card-border-color: var(--color-gray-true-700);
@@ -8,6 +9,7 @@
 
     &-dark {
       --card-bg-color: var(--color-gray-800);
+      --card-color: var(--color-gray-200);
       --card-border-color: var(--color-gray-700);
     }
 
